# EncryptionMethod

./: CHANGELOG.md  LICENSE  QWEN.md  README.md  index.html  package.json  plan  pnpm-lock.yaml  requirements.txt  vite.config.ts
.github/workflows/: build.yml
01 - FailedProjects/02 - AES Fail/: encryption.py
01 SingleLayer/CustomEDS/: simple_encryption.py
01 SingleLayer/MARS/: mars_encrypt.py
01 SingleLayer/RSA/: rsa_encryption.py
01 SingleLayer/SimpleEDS/: main_eds.py
02 - TypingClubHacks/: AutoTypingClubHack.js  OnceCorrectionBlock.js  typingclub-hack - Copy.js
02 MultiLayer/EnhancedVisualization/: 4.py  (+1 more)
05 Legacy/: aes_decryption.py  vaultic.py
scripts/: clean-comments.ts
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crypto/py/advanced/: generation.md
src-tauri/crypto/py/advanced/Encryptors/: key_generator.py  secure.key.encrypted
src-tauri/crypto/py/advanced/Secrets/: encrypt_secret.py
src-tauri/crypto/py/multi/CustomizableES/: customizable_es_encrypt.py
src-tauri/crypto/py/multi/MLCEDS/: mlc_eds_decrypt.py
src-tauri/crypto/py/multi/MultiLayeredEDS/: multilayered_eds_encrypt.py
src-tauri/crypto/py/quantum/Encryption/: QuantumEncryption.csproj
src-tauri/crypto/py/single/MARS/: mars_aes_decrypt.py
src-tauri/crypto/rs/: cipher.rs  handshake.rs  identity.rs  kdf.rs  nonce.rs  note.md  zero.rs
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  clipboard.rs  crypto.rs  error.rs  format.rs  generator.rs  io.rs  lib.rs  main.rs  memory.rs  models.rs  vlt.rs
src-tauri/tests/: aead.rs  fuzz_header.rs
(+69 files in other folders)
