[dependencies]
# Dalek crates for ECC
ed25519-dalek = { version = "2.0", features =["serde", "zeroize", "rand_core"] }
x25519-dalek = { version = "2.0", features = ["serde", "zeroize", "static_secrets"] }

# PAKE and Hashing
spake2 = "0.6" # or spake2-conflux for Ristretto255 default
ring = "0.17"
sha2 = "0.10"
hkdf = "0.12"

# AEADs
chacha20poly1305 = "0.10"
aes-gcm = "0.10"

# Security & Utilities
secrecy = { version = "0.8", features = ["serde"] }
zeroize = { version = "1.8", features =["zeroize_derive"] }
subtle = "2.5"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }