[package]
name = "vlt"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "vlt_lib"
path = "src/lib.rs"

[[bin]]
name = "vlt"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["std"] }
rand = "0.8"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
secrecy = "0.8"
memsec = "0.7"
bincode = "1.3"
thiserror = "1.0"
arboard = "3.4"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
dirs = "6.0"
